Ability to delete multiple jobs by passing multiple ids (#16)
* moved the obtaining of job logs to a separate provider class

* apply ability to use a relative log path to the jobLog provider, a few improvements of build.gradle

* minor changes

* changed jobId to long into the JobLogProvider

* added a new feature to delete jobs by passing multi ids, made some tests refactoring

* changes according to review comments

* added ability to use test properties when running tests, refactored some tests, fixed the @code-tag inappropriate usage into javadoc (#17)

Co-authored-by: Aleksandr Mikhin <aleksandr_mikhin@epam.com>

* minor changes according to review comments

* minor changes into api-markup docs

* a one more minor change into api-markup docs

* changes according to review comments

Co-authored-by: Aleksandr Mikhin <aleksandr_mikhin@epam.com>