@@ -19,6 +19,7 @@
 
 package com.epam.grid.engine.provider.job.slurm;
 
+import com.epam.grid.engine.TestPropertiesWithSlurmEngine;
 import com.epam.grid.engine.cmd.GridEngineCommandCompiler;
 import com.epam.grid.engine.cmd.SimpleCmdExecutor;
 import com.epam.grid.engine.entity.CommandResult;
@@ -33,18 +34,16 @@ import com.epam.grid.engine.entity.job.JobState;
 import com.epam.grid.engine.entity.job.ParallelEnvOptions;
 import com.epam.grid.engine.entity.job.ParallelExecutionOptions;
 import com.epam.grid.engine.exception.GridEngineException;
+import com.epam.grid.engine.utils.TextConstants;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.NullAndEmptySource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
-
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.CoreMatchers.containsString;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
@@ -52,15 +51,11 @@ import org.thymeleaf.context.IContext;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 
-
-import static com.epam.grid.engine.utils.TextConstants.EMPTY_STRING;
-import static org.mockito.Mockito.doReturn;
-
-@SpringBootTest(properties = {"grid.engine.type=SLURM"})
+@SpringBootTest
+@TestPropertiesWithSlurmEngine
 public class SlurmJobProviderTest {
 
     private static final String SLURM_USER = "root";
@@ -88,7 +83,7 @@ public class SlurmJobProviderTest {
     private static final String JOB_PRIORITY1 = "0.99998474121093";
     private static final String JOB_PRIORITY2 = "0.99998474074527";
     private static final String JOB_PRIORITY3 = "0.00000000000000";
-    private static final long SOME_WRONG_SENT_PRIORITY = -10L;
+    private static final long SOME_WRONG_SENT_PRIORITY = -1L;
     private static final long SECOND_WRONG_SENT_PRIORITY = 4_294_967_295L;
 
     private static final long SOME_CORRECT_JOB_ID = 5L;
@@ -102,6 +97,8 @@ public class SlurmJobProviderTest {
     private static final String SOME_ARGUMENT_WITH_SPACES = "some argument with spaces";
     private static final String SOME_JOB_IS_SUBMITTED = "Submitted batch job " + SOME_CORRECT_JOB_ID_STRING;
     private static final String SOME_JOB_LOG_DIRECTORY_PATH = "/mnt/logs";
+    private static final int SOME_GREATER_THAN_ZERO_VALUE = 5;
+    private static final int ZERO_VALUE = 0;
 
     private static final List<String> EMPTY_LIST = List.of();
     private static final String SQUEUE_COMMAND_EXECUTION_HEADER = "ACCOUNT|TRES_PER_NODE|MIN_CPUS|MIN_TMP_DISK|"
@@ -117,36 +114,29 @@ public class SlurmJobProviderTest {
             + "|worker1|2022-05-13T10:29:10|%s|0|%s|(null)|N/A|(null)|/";
 
     private static final String RUNNING_JOB_SUBMIT_TIME = "2022-05-13T10:29:09";
-    private static final String RUNNING_JOB_STDOUT = String.format(JOB_STDOUT_STRING_FORMAT_TEMPLATE,
+    private static final String RUNNING_JOB_STRING = String.format(JOB_STDOUT_STRING_FORMAT_TEMPLATE,
             SOME_CORRECT_JOB_ID, JOB_NAME1, JOB_PRIORITY1, RUNNING_STATUS_CODE, SLURM_USER,
             TEST_QUEUE, RUNNING_STRING, RUNNING_JOB_SUBMIT_TIME);
 
     private static final String PENDING_JOB_SUBMIT_TIME = "2022-05-15T08:03:42";
-    private static final String PENDING_JOB_STDOUT = String.format(JOB_STDOUT_STRING_FORMAT_TEMPLATE,
+    private static final String PENDING_JOB_STRING = String.format(JOB_STDOUT_STRING_FORMAT_TEMPLATE,
             SECOND_CORRECT_JOB_ID, JOB_NAME2, JOB_PRIORITY2, PENDING_STATUS_CODE, SOME_USER_NAME,
             TEST_QUEUE, PENDING_STRING, PENDING_JOB_SUBMIT_TIME);
 
     private static final String SUSPENDED_JOB_SUBMIT_TIME = "2022-05-15T08:03:38";
-    private static final String SUSPENDED_JOB_STDOUT = String.format(JOB_STDOUT_STRING_FORMAT_TEMPLATE,
+    private static final String SUSPENDED_JOB_STRING = String.format(JOB_STDOUT_STRING_FORMAT_TEMPLATE,
             THIRD_CORRECT_JOB_ID, JOB_NAME3, JOB_PRIORITY3, SUSPENDED_STATUS_CODE, SLURM_USER,
             TEST_QUEUE, SUSPENDED_STRING, SUSPENDED_JOB_SUBMIT_TIME);
 
-    private static final List<String> VALID_STDOUT = List.of(SQUEUE_COMMAND_EXECUTION_HEADER, RUNNING_JOB_STDOUT);
+    private static final List<String> VALID_STDOUT = List.of(SQUEUE_COMMAND_EXECUTION_HEADER, RUNNING_JOB_STRING);
     private static final List<String> TWO_VALID_JOBS_STDOUT = List.of(SQUEUE_COMMAND_EXECUTION_HEADER,
-            PENDING_JOB_STDOUT,
-            RUNNING_JOB_STDOUT);
+            PENDING_JOB_STRING, RUNNING_JOB_STRING);
 
     private static final List<String> INVALID_OUTPUT = List.of(SQUEUE_COMMAND_EXECUTION_HEADER,
             "(null)|N/A|1|0|2022-05-18T10:29:10|(null)|root|OK|2|test.sh|(null)|5-00:00:00|500M||/data/test.sh");
 
     private static final String TEXT_JOB_SUBMITTED = "Submitted batch job " + SOME_CORRECT_JOB_ID_STRING;
     private static final String SBATCH_COMMAND = "sbatch";
-    private static final String ENV_VAR_KEY = "parameter1";
-    private static final String ENV_VAR_VALUE = "some value with spaces";
-    private static final String ENV_VAR_COMMAND_ARG = String.format("%s=%s", ENV_VAR_KEY, ENV_VAR_VALUE);
-    private static final String JOB_PRIORITY4 = "9999";
-    private static final String JOB_PARTITION = "normal";
-    private static final String JOB_WORK_DIR = "/data/";
 
     private static final String SCANCEL_COMMAND = "scancel";
     private static final String VERBOSE_KEY = "-v";
@@ -161,9 +151,6 @@ public class SlurmJobProviderTest {
                     TERMINATING_JOB_PREFIX + SOME_CORRECT_JOB_ID_STRING,
                     String.format(ERROR_DELETING_STRING_TEMPLATE, SOME_CORRECT_JOB_ID_STRING),
                     TERMINATING_JOB_PREFIX + SECOND_CORRECT_JOB_ID);
-
-    private static final String SLURM_JOB_WITH_PARALLEL_ENV_OPTS = "ParallelExecutionOptions(numTasks=4, nodes=2, "
-            + "cpusPerTask=4, numTasksPerNode=2, exclusive=true)";
 
     @Autowired
     private SlurmJobProvider slurmJobProvider;
@@ -182,7 +169,6 @@ public class SlurmJobProviderTest {
                 .build();
 
         mockCommandCompilation(SQUEUE_COMMAND, commandResult, ALL_FORMAT);
-        Assertions.assertEquals(CommandType.SLURM, slurmJobProvider.getProviderType());
         final JobFilter jobFilter = new JobFilter();
         final Throwable thrown = Assertions.assertThrows(GridEngineException.class,
                 () -> slurmJobProvider.filterJobs(jobFilter));
@@ -200,7 +186,6 @@ public class SlurmJobProviderTest {
         final List<Job> result = slurmJobProvider.filterJobs(new JobFilter()).getElements();
 
         Assertions.assertNull(result);
-        Assertions.assertEquals(CommandType.SLURM, slurmJobProvider.getProviderType());
     }
 
     @Test
@@ -224,7 +209,7 @@ public class SlurmJobProviderTest {
     public void shouldReturnCorrectOwnerFiltration() {
         final Job runningJob = runningJobTemplate();
         final JobFilter jobFilter = new JobFilter();
-        jobFilter.setOwners(Collections.singletonList(SLURM_USER));
+        jobFilter.setOwners(List.of(SLURM_USER));
         final CommandResult commandResult = CommandResult.builder()
                 .stdOut(VALID_STDOUT)
                 .stdErr(EMPTY_LIST)
@@ -274,7 +259,7 @@ public class SlurmJobProviderTest {
     @Test
     public void shouldReturnCorrectNameFiltration() {
         final JobFilter jobFilter = new JobFilter();
-        jobFilter.setNames(Collections.singletonList(JOB_NAME1));
+        jobFilter.setNames(List.of(JOB_NAME1));
         final Job runningJob = runningJobTemplate();
         final CommandResult commandResult = CommandResult.builder()
                 .stdOut(VALID_STDOUT)
@@ -286,21 +271,6 @@ public class SlurmJobProviderTest {
 
         Assertions.assertEquals(1, result.getElements().size());
         Assertions.assertEquals(runningJob, result.getElements().get(0));
-    }
-
-    @Test
-    public void shouldFailWithException() {
-        final JobFilter jobFilter = new JobFilter();
-        final CommandResult commandResult = CommandResult.builder()
-                .stdOut(EMPTY_LIST)
-                .stdErr(EMPTY_LIST)
-                .exitCode(1)
-                .build();
-
-        mockCommandCompilation(SQUEUE_COMMAND, commandResult, ALL_FORMAT);
-        final Throwable thrown = Assertions.assertThrows(GridEngineException.class,
-                () -> slurmJobProvider.filterJobs(jobFilter));
-        Assertions.assertNotNull(thrown.getMessage());
     }
 
     @ParameterizedTest
@@ -321,17 +291,17 @@ public class SlurmJobProviderTest {
 
     static Stream<Arguments> provideCasesWithFiltrationByState() {
         return Stream.of(
-                Arguments.of(RUNNING_STRING, RUNNING_JOB_STDOUT, runningJobTemplate()),
-                Arguments.of(PENDING_STRING, PENDING_JOB_STDOUT, pendingJobTemplate()),
-                Arguments.of(SUSPENDED_STRING, SUSPENDED_JOB_STDOUT, suspendedJobTemplate())
+                Arguments.of(RUNNING_STRING, RUNNING_JOB_STRING, runningJobTemplate()),
+                Arguments.of(PENDING_STRING, PENDING_JOB_STRING, pendingJobTemplate()),
+                Arguments.of(SUSPENDED_STRING, SUSPENDED_JOB_STRING, suspendedJobTemplate())
         );
     }
 
     private void mockCommandCompilation(final String command, final CommandResult commandResult,
                                         final String... compiledArray) {
-        doReturn(compiledArray).when(mockCommandCompiler)
+        Mockito.doReturn(compiledArray).when(mockCommandCompiler)
                 .compileCommand(Mockito.eq(CommandType.SLURM), Mockito.matches(command), Mockito.any());
-        doReturn(commandResult).when(mockCmdExecutor).execute(compiledArray);
+        Mockito.doReturn(commandResult).when(mockCmdExecutor).execute(compiledArray);
     }
 
     private static Job runningJobTemplate() {
@@ -390,9 +360,7 @@ public class SlurmJobProviderTest {
         final String binaryContextArgument = String.format("%s \\\"%s\\\" \\\"%s\\\"", SOME_BINARY_COMMAND,
                 SOME_ARGUMENT, SOME_ARGUMENT_WITH_SPACES);
 
-        final CommandResult commandResult = new CommandResult(List.of(SOME_JOB_IS_SUBMITTED), 0, EMPTY_LIST);
-        doReturn(commandResult).when(mockCmdExecutor).execute(Mockito.any());
-
+        mockCommandCompilation(SBATCH_COMMAND, new CommandResult(List.of(SOME_JOB_IS_SUBMITTED), 0, EMPTY_LIST));
         Assertions.assertDoesNotThrow(() -> slurmJobProvider.runJob(testJobOptions, SOME_JOB_LOG_DIRECTORY_PATH));
 
         final ArgumentCaptor<IContext> contextCaptor = ArgumentCaptor.forClass(IContext.class);
@@ -413,164 +381,147 @@ public class SlurmJobProviderTest {
 
     static Stream<Arguments> provideInvalidJobOptions() {
         return Stream.of(
-                Arguments.of(JobOptions.builder().priority(SOME_WRONG_SENT_PRIORITY).command(JOB_NAME1).build()),
-                Arguments.of(JobOptions.builder().priority(SECOND_WRONG_SENT_PRIORITY).command(JOB_NAME1).build())
-        );
+                    JobOptions.builder().priority(SOME_WRONG_SENT_PRIORITY).command(JOB_NAME1).build(),
+                    JobOptions.builder().priority(SECOND_WRONG_SENT_PRIORITY).command(JOB_NAME1).build())
+                .map(Arguments::of);
+    }
+
+    @ParameterizedTest
+    @MethodSource("provideBadCommandResultForJobSubmitting")
+    public void shouldThrowWhenBadCommandResultDuringJobSubmitting(final CommandResult commandResult) {
+        final JobOptions jobOptions = JobOptions.builder().command(JOB_NAME1).build();
+        mockCommandCompilation(SBATCH_COMMAND, commandResult, SBATCH_COMMAND, JOB_NAME1);
+        Assertions.assertThrows(GridEngineException.class,
+                () -> slurmJobProvider.runJob(jobOptions, SOME_JOB_LOG_DIRECTORY_PATH));
+    }
+
+    static Stream<Arguments> provideBadCommandResultForJobSubmitting() {
+        return Stream.of(
+                        new CommandResult(EMPTY_LIST, 1, EMPTY_LIST),
+                        new CommandResult(EMPTY_LIST, 0, EMPTY_LIST),
+                        new CommandResult(List.of(SOME_BINARY_COMMAND), 0, EMPTY_LIST))
+                .map(Arguments::of);
     }
 
     @Test
     public void shouldThrowUnsupportedExceptionWhenPassedPeOptionsToJobSubmitting() {
         final JobOptions jobOptions = JobOptions.builder().command(JOB_NAME1)
-                .parallelEnvOptions(new ParallelEnvOptions(EMPTY_STRING, 1, 10))
+                .parallelEnvOptions(new ParallelEnvOptions())
                 .build();
         Assertions.assertThrows(UnsupportedOperationException.class,
                 () -> slurmJobProvider.runJob(jobOptions, SOME_JOB_LOG_DIRECTORY_PATH));
     }
 
-    @ParameterizedTest
-    @MethodSource("provideCorrectSbatchCommands")
-    public void shouldReturnScheduledJobIndex(final String[] command) {
-        final Job expectedFilteredJob = correctBuild();
-        final JobOptions jobOptions = new JobOptions();
-        final CommandResult commandResult = new CommandResult();
-
-        jobOptions.setCommand(JOB_NAME1);
-        commandResult.setStdOut(Collections.singletonList(TEXT_JOB_SUBMITTED));
-        commandResult.setStdErr(EMPTY_LIST);
-
-        mockCommandCompilation(SBATCH_COMMAND, commandResult, command);
-        final Job result = slurmJobProvider.runJob(jobOptions, SOME_JOB_LOG_DIRECTORY_PATH);
-
-        Assertions.assertEquals(expectedFilteredJob.getId(), result.getId());
-    }
-
-    static Stream<Arguments> provideCorrectSbatchCommands() {
-        return Stream.of(
-                    new String[]{SBATCH_COMMAND, "--export=", ENV_VAR_COMMAND_ARG, JOB_NAME1},
-                    new String[]{SBATCH_COMMAND, "--priority=", JOB_PRIORITY4, JOB_NAME1},
-                    new String[]{SBATCH_COMMAND, "-J", JOB_NAME3, JOB_NAME1},
-                    new String[]{SBATCH_COMMAND, "--partition=", JOB_PARTITION, JOB_NAME1},
-                    new String[]{SBATCH_COMMAND, "-D", JOB_WORK_DIR, JOB_NAME1})
-                .map((t) -> (Object) t)
-                .map(Arguments::of);
-    }
-
     @Test
-    public void shouldReturnCorrectJob() {
-        final Job expectedFilteredJob = correctBuild();
+    public void shouldReturnCorrectSubmittedJob() {
+        final Job expectedSubmittedJob = Job.builder()
+                .id(SOME_CORRECT_JOB_ID)
+                .state(JobState.builder().category(JobState.Category.PENDING).build())
+                .build();
+
         final JobOptions jobOptions = new JobOptions();
-        final CommandResult commandResult = new CommandResult();
         jobOptions.setCommand(JOB_NAME1);
 
-        commandResult.setStdOut(Collections.singletonList(TEXT_JOB_SUBMITTED));
-        commandResult.setStdErr(EMPTY_LIST);
+        final CommandResult commandResult = CommandResult.builder()
+                .stdOut(List.of(TEXT_JOB_SUBMITTED))
+                .stdErr(EMPTY_LIST)
+                .build();
 
         mockCommandCompilation(SBATCH_COMMAND, commandResult, SBATCH_COMMAND, JOB_NAME1);
         final Job result = slurmJobProvider.runJob(jobOptions, SOME_JOB_LOG_DIRECTORY_PATH);
 
-        Assertions.assertEquals(expectedFilteredJob, result);
-    }
-
-    @Test
-    public void shouldReturnCorrectSetParallelExecutionOptions() {
-        final JobOptions testJobOptions = JobOptions.builder()
-                .parallelExecutionOptions(ParallelExecutionOptions.builder()
-                        .numTasks(4)
-                        .nodes(2)
-                        .cpusPerTask(4)
-                        .numTasksPerNode(2)
-                        .exclusive(true)
-                        .build())
-                .command(JOB_NAME1)
-                .build();
-
-        final CommandResult commandResult = new CommandResult(List.of(SOME_JOB_IS_SUBMITTED), 0, EMPTY_LIST);
-        doReturn(commandResult).when(mockCmdExecutor).execute(Mockito.any());
-
-        Assertions.assertEquals(slurmJobProvider.runJob(testJobOptions, SOME_JOB_LOG_DIRECTORY_PATH), correctBuild());
-
-        final ArgumentCaptor<IContext> contextCaptor = ArgumentCaptor.forClass(IContext.class);
-        Mockito.verify(mockCommandCompiler).compileCommand(Mockito.any(), Mockito.any(), contextCaptor.capture());
-
-        assertThat(contextCaptor.getValue().getVariable("options").toString(),
-                containsString(SLURM_JOB_WITH_PARALLEL_ENV_OPTS));
-    }
-
-    @Test
-    public void shouldThrowUnsupportedExceptionWhenParallelExecutionOptionsAreNegative() {
-        final JobOptions jobOptions = JobOptions.builder().command(JOB_NAME1)
-                .parallelExecutionOptions(ParallelExecutionOptions.builder()
-                        .numTasks(-4)
-                        .nodes(-2)
-                        .cpusPerTask(-4)
-                        .numTasksPerNode(-2)
-                        .build())
-                .build();
-        Assertions.assertThrows(UnsupportedOperationException.class,
-                () -> slurmJobProvider.runJob(jobOptions, SOME_JOB_LOG_DIRECTORY_PATH));
+        Assertions.assertEquals(expectedSubmittedJob, result);
     }
 
     @ParameterizedTest
-    @MethodSource("provideValidNameCasesForRequestsToDeleteJob")
-    public void shouldReturnCorrectUserNameAndJobIdWhenDeleteJob(final String expectedUserName,
-                                                                 final String passedUserName,
-                                                                 final String... commandArgs) {
-        final CommandResult squeueCommandResult = CommandResult.builder()
-                .stdOut(VALID_STDOUT)
-                .stdErr(EMPTY_LIST)
+    @MethodSource("provideWrongParallelExecutionOptionsCasesForJobSubmitting")
+    public void shouldThrowWhenWrongParallelExecutionOptionsPassToJobSubmit(final ParallelExecutionOptions options) {
+        final JobOptions jobOptions = JobOptions.builder().command(JOB_NAME1)
+                .parallelExecutionOptions(options)
                 .build();
+        Assertions.assertThrows(GridEngineException.class,
+                () -> slurmJobProvider.runJob(jobOptions, SOME_JOB_LOG_DIRECTORY_PATH));
+    }
+
+    static Stream<Arguments> provideWrongParallelExecutionOptionsCasesForJobSubmitting() {
+        return Stream.of(
+                    new ParallelExecutionOptions(ZERO_VALUE, SOME_GREATER_THAN_ZERO_VALUE,
+                            SOME_GREATER_THAN_ZERO_VALUE, SOME_GREATER_THAN_ZERO_VALUE, false),
+                    new ParallelExecutionOptions(SOME_GREATER_THAN_ZERO_VALUE, ZERO_VALUE,
+                            SOME_GREATER_THAN_ZERO_VALUE, SOME_GREATER_THAN_ZERO_VALUE, false),
+                    new ParallelExecutionOptions(SOME_GREATER_THAN_ZERO_VALUE, SOME_GREATER_THAN_ZERO_VALUE,
+                            ZERO_VALUE, SOME_GREATER_THAN_ZERO_VALUE, false),
+                    new ParallelExecutionOptions(SOME_GREATER_THAN_ZERO_VALUE, SOME_GREATER_THAN_ZERO_VALUE,
+                            SOME_GREATER_THAN_ZERO_VALUE, ZERO_VALUE, false))
+                .map(Arguments::of);
+    }
+
+    @ParameterizedTest
+    @MethodSource("provideCasesForNotFoundAnyJobsToDeleting")
+    public void shouldThrowWhenNotFoundAnyJobsForDeleting(final String user, final List<Long> ids) {
+        final DeleteJobFilter jobFilter = DeleteJobFilter.builder()
+                .ids(ids)
+                .user(user)
+                .build();
+        final CommandResult squeueCommandResult = new CommandResult(List.of(SQUEUE_COMMAND_EXECUTION_HEADER), 0,
+                EMPTY_LIST);
+        mockCommandCompilation(SQUEUE_COMMAND, squeueCommandResult, ALL_FORMAT,
+                JOB_LIST_KEY, SOME_CORRECT_JOB_ID_STRING);
+        Assertions.assertThrows(GridEngineException.class, () -> slurmJobProvider.deleteJob(jobFilter));
+    }
+
+    static Stream<Arguments> provideCasesForNotFoundAnyJobsToDeleting() {
+        return Stream.of(
+                    Arguments.of(TextConstants.EMPTY_STRING, List.of(SOME_CORRECT_JOB_ID)),
+                    Arguments.of(SOME_USER_NAME, List.of()),
+                    Arguments.of(SOME_USER_NAME, List.of(SOME_CORRECT_JOB_ID))
+                );
+    }
+
+    @ParameterizedTest
+    @NullAndEmptySource
+    @ValueSource(strings = {SLURM_USER})
+    public void shouldReturnCorrectUserNameAndJobIdDuringJobDeleting(final String userName) {
+        final CommandResult squeueCommandResult = new CommandResult(VALID_STDOUT, 0, EMPTY_LIST);
         mockCommandCompilation(SQUEUE_COMMAND, squeueCommandResult, ALL_FORMAT,
                 JOB_LIST_KEY, SOME_CORRECT_JOB_ID_STRING);
 
         final CommandResult scancelCommandResult = new CommandResult(EMPTY_LIST, 0,
-                Collections.singletonList(TERMINATING_JOB_PREFIX + SOME_CORRECT_JOB_ID_STRING));
-        mockCommandCompilation(SCANCEL_COMMAND, scancelCommandResult, commandArgs);
+                List.of(TERMINATING_JOB_PREFIX + SOME_CORRECT_JOB_ID_STRING));
+        mockCommandCompilation(SCANCEL_COMMAND, scancelCommandResult, SCANCEL_COMMAND, VERBOSE_KEY);
 
-        final DeleteJobFilter testDeleteJobFilter = new DeleteJobFilter(false, SOME_CORRECT_JOB_ID, passedUserName);
-        final DeletedJobInfo deletedJobInfoResult = slurmJobProvider.deleteJob(testDeleteJobFilter);
-        Assertions.assertEquals(expectedUserName, deletedJobInfoResult.getUser());
-        Assertions.assertEquals(Collections.singletonList(SOME_CORRECT_JOB_ID), deletedJobInfoResult.getIds());
-    }
-
-    static Stream<Arguments> provideValidNameCasesForRequestsToDeleteJob() {
-        return Stream.of(
-                Arguments.of(SLURM_USER, null,
-                    new String[] {SCANCEL_COMMAND, VERBOSE_KEY, SOME_CORRECT_JOB_ID_STRING}),
-                Arguments.of(SOME_USER_NAME, SOME_USER_NAME,
-                    new String[] {SCANCEL_COMMAND, VERBOSE_KEY, OWNER_FILTRATION_KEY,
-                                  SOME_USER_NAME, SOME_CORRECT_JOB_ID_STRING})
-        );
+        final DeleteJobFilter testDeleteJobFilter = new DeleteJobFilter(false, List.of(SOME_CORRECT_JOB_ID),
+                userName);
+        final Listing<DeletedJobInfo> result = slurmJobProvider.deleteJob(testDeleteJobFilter);
+        Assertions.assertEquals(1, result.getElements().size());
+        Assertions.assertEquals(new DeletedJobInfo(SOME_CORRECT_JOB_ID, SLURM_USER), result.getElements().get(0));
     }
 
     @Test
     public void shouldReturnCorrectListDeletedJobs() {
+        final CommandResult squeueCommandResult = CommandResult.builder()
+                .stdOut(List.of(SQUEUE_COMMAND_EXECUTION_HEADER, PENDING_JOB_STRING))
+                .stdErr(EMPTY_LIST).build();
+        mockCommandCompilation(SQUEUE_COMMAND, squeueCommandResult, ALL_FORMAT, OWNER_FILTRATION_KEY, SOME_USER_NAME);
+
         final CommandResult scancelCommandResult = new CommandResult(EMPTY_LIST, 0, DELETE_ALL_USER_JOBS_STDOUT);
         mockCommandCompilation(SCANCEL_COMMAND, scancelCommandResult, SCANCEL_COMMAND, VERBOSE_KEY,
                 OWNER_FILTRATION_KEY, SOME_USER_NAME);
 
         final DeleteJobFilter testDeleteJobFilter = new DeleteJobFilter(false, null, SOME_USER_NAME);
-        final DeletedJobInfo deletedJobInfoResult = slurmJobProvider.deleteJob(testDeleteJobFilter);
-        Assertions.assertEquals(SOME_USER_NAME, deletedJobInfoResult.getUser());
-        Assertions.assertEquals(List.of(SECOND_CORRECT_JOB_ID), deletedJobInfoResult.getIds());
-    }
-
-    @Test
-    public void shouldThrowWhenUserIsNotPassedAndDeletingJobNotFound() {
-        final CommandResult squeueCommandResult = CommandResult.builder()
-                .stdOut(EMPTY_LIST)
-                .exitCode(1)
-                .stdErr(Collections.singletonList(SQUEUE_JOB_LOADING_ERROR_STRING))
-                .build();
-        mockCommandCompilation(SQUEUE_COMMAND, squeueCommandResult, ALL_FORMAT,
-                JOB_LIST_KEY, SOME_CORRECT_JOB_ID_STRING);
-        final DeleteJobFilter testDeleteJobFilter = new DeleteJobFilter(false, SOME_CORRECT_JOB_ID, null);
-        Assertions.assertThrows(GridEngineException.class, () -> slurmJobProvider.deleteJob(testDeleteJobFilter));
+        final Listing<DeletedJobInfo> result = slurmJobProvider.deleteJob(testDeleteJobFilter);
+        Assertions.assertEquals(1, result.getElements().size());
+        Assertions.assertEquals(new DeletedJobInfo(SECOND_CORRECT_JOB_ID, SOME_USER_NAME), result.getElements().get(0));
     }
 
     @ParameterizedTest
-    @ValueSource(ints = {0, 1})
-    public void shouldThrowWhenDeletingJobsWentWrong(final int exitCode) {
-        final CommandResult scancelCommandResult = new CommandResult(EMPTY_LIST, exitCode, EMPTY_LIST);
+    @MethodSource("provideWrongCommandResultsForJobDeleting")
+    public void shouldThrowWhenDeletingJobsWentWrong(final CommandResult squeueCommandResult,
+                                                     final int scancelExitCode) {
+        mockCommandCompilation(SQUEUE_COMMAND, squeueCommandResult, ALL_FORMAT,
+                OWNER_FILTRATION_KEY, SOME_USER_NAME);
+
+        final CommandResult scancelCommandResult = new CommandResult(EMPTY_LIST, scancelExitCode, EMPTY_LIST);
         mockCommandCompilation(SCANCEL_COMMAND, scancelCommandResult,
                 VERBOSE_KEY, OWNER_FILTRATION_KEY, SOME_USER_NAME);
 
@@ -578,25 +529,29 @@ public class SlurmJobProviderTest {
         Assertions.assertThrows(GridEngineException.class, () -> slurmJobProvider.deleteJob(testDeleteJobFilter));
     }
 
-    @Test
-    public void shouldThrowWhenAllJobsDeletionCompletedWithErrors() {
-        final List<String> allJobsErrorStdOut = new ArrayList<>(DELETE_ALL_USER_JOBS_STDOUT);
-        allJobsErrorStdOut.add(String.format(ERROR_DELETING_STRING_TEMPLATE, SECOND_CORRECT_JOB_ID));
-
-        final CommandResult scancelCommandResult = new CommandResult(EMPTY_LIST, 0, allJobsErrorStdOut);
-        mockCommandCompilation(SCANCEL_COMMAND, scancelCommandResult, SCANCEL_COMMAND, VERBOSE_KEY,
-                OWNER_FILTRATION_KEY, SOME_USER_NAME);
-
-        final DeleteJobFilter deleteJobFilter = new DeleteJobFilter(false, null, SOME_USER_NAME);
-        Assertions.assertThrows(GridEngineException.class, () -> slurmJobProvider.deleteJob(deleteJobFilter));
+    static Stream<Arguments> provideWrongCommandResultsForJobDeleting() {
+        return Stream.of(
+                Arguments.of(new CommandResult(EMPTY_LIST, 1, List.of(SQUEUE_JOB_LOADING_ERROR_STRING)), 0),
+                Arguments.of(new CommandResult(VALID_STDOUT, 0, EMPTY_LIST), 0),
+                Arguments.of(new CommandResult(VALID_STDOUT, 0, EMPTY_LIST), 1)
+        );
     }
 
-    private static Job correctBuild() {
-        return Job.builder()
-                .id(runningJobTemplate().getId())
-                .state(JobState.builder()
-                        .category(JobState.Category.PENDING)
-                        .build())
-                .build();
+    @Test
+    public void shouldThrowWhenAllJobsDeletionCompletedWithErrors() {
+        final CommandResult squeueCommandResult = CommandResult.builder()
+                .stdOut(List.of(SQUEUE_COMMAND_EXECUTION_HEADER, SUSPENDED_JOB_STRING))
+                .stdErr(EMPTY_LIST).build();
+        mockCommandCompilation(SQUEUE_COMMAND, squeueCommandResult);
+
+        final List<String> allJobsErrorStdOut = new ArrayList<>(DELETE_ALL_USER_JOBS_STDOUT);
+        allJobsErrorStdOut.add(String.format(ERROR_DELETING_STRING_TEMPLATE, THIRD_CORRECT_JOB_ID));
+
+        final CommandResult scancelCommandResult = new CommandResult(EMPTY_LIST, 0, allJobsErrorStdOut);
+        mockCommandCompilation(SCANCEL_COMMAND, scancelCommandResult);
+
+        final DeleteJobFilter deleteJobFilter = new DeleteJobFilter(false, List.of(THIRD_CORRECT_JOB_ID),
+                SOME_USER_NAME);
+        Assertions.assertThrows(GridEngineException.class, () -> slurmJobProvider.deleteJob(deleteJobFilter));
     }
 }
